syntax = "proto3";

package snowflake.service.api.nodeservicev1;

option go_package = "github.com/ikaiguang/go-snowflake-node-id/api/node-service/v1/services;nodeservicev1";
option java_multiple_files = true;
option java_package = "snowflake.service.api.nodeservicev1";
option java_outer_classname = "SnowflakeServiceApiNodeServiceV1";

import "google/api/annotations.proto";
import "github.com/ikaiguang/go-snowflake-node-id/api/node-service/v1/resources/node_id.resource.v1.proto";

// SrvWorker 服务
service SrvWorker {
  rpc GetNodeId(snowflake.service.api.nodev1.GetNodeIdReq) returns (snowflake.service.api.nodev1.SnowflakeWorkerNode) {
    option (google.api.http) = {
      post : "/api/v1/node-id/get-node-id"
      body : "*"
    };
  }

  rpc ExtendNodeId(snowflake.service.api.nodev1.ExtendNodeIdReq) returns (snowflake.service.api.nodev1.Result) {
    option (google.api.http) = {
      post : "/api/v1/node-id/extend-node-id"
      body : "*"
    };
  }
}